@@ -2,6 +2,7 @@
 - Bugfix: Rendering of the 'extra' part for long string works
   now correctly.
 - Refactored the configuration and introduced models there.
+- Removed the \Krexx::enable() call.
 
 2.0.0
 - Added sourcecode to the closure analysis.
